--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Professional portfolio of a web developer, app developer, and creator of the Abhaya programming language" />
-    <title>Professional Portfolio | Web Developer & Abhaya Language Creator</title>
+    <title>Abhaya Bikram Shahi </title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
