--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Professional portfolio of a web developer, app developer, and creator of the Abhaya programming language" />
-    <title>Abhaya Bikram Shahi </title>
+    <meta name="description" content="Abhaya Bikram Shahi, web developer Nepal, app developer, portfolio, modern web development" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
