--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/jpeg" href="/src/images/abhaya1.jpg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/images/abhaya1.jpg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/images/abhaya1.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/images/abhaya1.jpg" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Abhaya Bikram Shahi, web developer Nepal, app developer, portfolio, modern web development" />
@@ -13,15 +13,15 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Abhaya Bikram Shahi - Web Developer" />
     <meta property="og:description" content="Portfolio website of Abhaya Bikram Shahi - Web Developer and App Developer from Nepal" />
-    <meta property="og:image" content="/logo.jpg" />
-    <meta property="og:url" content="https://abhaya.com.np" />
+    <meta property="og:image" content="/src/images/abhaya1.jpg" />
+    <meta property="og:url" content="https://abhayabikramshahi.netlify.app/" />
     <meta property="og:type" content="website" />
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Abhaya Bikram Shahi - Web Developer" />
     <meta name="twitter:description" content="Portfolio website of Abhaya Bikram Shahi - Web Developer and App Developer from Nepal" />
-    <meta name="twitter:image" content="/logo.jpg" />
+    <meta name="twitter:image" content="/src/images/abhaya1.jpg" />
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
