--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Abhaya - A modern programming language designed for simplicity and efficiency. Learn about its features and start coding today." />
 
   <!-- ✅ Canonical URL -->
-  <link rel="canonical" href="https://abhaya-language.netlify.app/" />
+  <link rel="canonical" href="https://www.abhayabikramshahi.xyz/" />
 
   <!-- 🧠 Keywords -->
   <meta name="keywords" content="Abhaya language, programming language, modern programming, language features, coding, development" />
@@ -20,24 +20,24 @@
   <meta name="author" content="Abhaya Language Team" />
 
   <!-- 📌 Favicon & Manifest -->
-  <link rel="icon" type="image/jpeg" href="./src/images/abhaya1.jpg" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./src/images/abhaya1.jpg" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./src/images/abhaya1.jpg" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./src/images/abhaya1.jpg" />
-  <link rel="manifest" href="./site.webmanifest" />
+  <link rel="icon" type="image/jpeg" href="/images/abhaya1.jpg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/abhaya1.jpg" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/abhaya1.jpg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/abhaya1.jpg" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <!-- 🔗 Open Graph Meta (for Facebook, LinkedIn, etc.) -->
   <meta property="og:title" content="Abhaya Language — Modern Programming Language" />
   <meta property="og:description" content="Discover Abhaya - A modern programming language designed for simplicity and efficiency. Start coding with Abhaya today." />
-  <meta property="og:image" content="./src/images/abhaya1.jpg" />
-  <meta property="og:url" content="https://abhaya-language.netlify.app/" />
+  <meta property="og:image" content="/images/abhaya1.jpg" />
+  <meta property="og:url" content="https://www.abhayabikramshahi.xyz/" />
   <meta property="og:type" content="website" />
 
   <!-- 🐦 Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Abhaya Language — Modern Programming Language" />
   <meta name="twitter:description" content="A modern programming language designed for simplicity and efficiency. Start coding with Abhaya today." />
-  <meta name="twitter:image" content="./src/images/abhaya1.jpg" />
+  <meta name="twitter:image" content="/images/abhaya1.jpg" />
 
   <!-- ✍️ Fonts & Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet" />
