--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- 🔥 SEO Title -->
-  <title>Abhaya Language | Modern Programming Language</title>
+  <title>Abhaya Bikram Shahi | Full Stack Developer & Tech Entrepreneur</title>
 
   <!-- 🔥 SEO Description -->
-  <meta name="description" content="Abhaya - A modern programming language designed for simplicity and efficiency. Learn about its features and start coding today." />
+  <meta name="description" content="Full Stack Developer specializing in React, Node.js, Python, and modern web technologies. Building innovative solutions with expertise in AI, automation, and data science." />
 
   <!-- ✅ Canonical URL -->
   <link rel="canonical" href="https://www.abhayabikramshahi.xyz/" />
 
   <!-- 🧠 Keywords -->
-  <meta name="keywords" content="Abhaya language, programming language, modern programming, language features, coding, development" />
+  <meta name="keywords" content="Full Stack Developer, React Developer, Node.js, Python, AI Development, Web Development, Tech Entrepreneur, Software Engineer, Frontend Developer, Backend Developer" />
 
   <!-- 👤 Author -->
-  <meta name="author" content="Abhaya Language Team" />
+  <meta name="author" content="Abhaya Bikram Shahi" />
 
   <!-- 📌 Favicon & Manifest -->
   <link rel="icon" type="image/jpeg" href="/images/abhaya1.jpg" />
@@ -27,16 +27,16 @@
   <link rel="manifest" href="/site.webmanifest" />
 
   <!-- 🔗 Open Graph Meta (for Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="Abhaya Language — Modern Programming Language" />
-  <meta property="og:description" content="Discover Abhaya - A modern programming language designed for simplicity and efficiency. Start coding with Abhaya today." />
+  <meta property="og:title" content="Abhaya Bikram Shahi — Full Stack Developer & Tech Entrepreneur" />
+  <meta property="og:description" content="Full Stack Developer specializing in React, Node.js, Python, and modern web technologies. Building innovative solutions with expertise in AI, automation, and data science." />
   <meta property="og:image" content="/images/abhaya1.jpg" />
   <meta property="og:url" content="https://www.abhayabikramshahi.xyz/" />
   <meta property="og:type" content="website" />
 
   <!-- 🐦 Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Abhaya Language — Modern Programming Language" />
-  <meta name="twitter:description" content="A modern programming language designed for simplicity and efficiency. Start coding with Abhaya today." />
+  <meta name="twitter:title" content="Abhaya Bikram Shahi — Full Stack Developer & Tech Entrepreneur" />
+  <meta name="twitter:description" content="Full Stack Developer specializing in React, Node.js, Python, and modern web technologies. Building innovative solutions with expertise in AI, automation, and data science." />
   <meta name="twitter:image" content="/images/abhaya1.jpg" />
 
   <!-- ✍️ Fonts & Styles -->
