--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 
   <!-- ✍️ Fonts & Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet" />
+
+  <!-- Google AdSense -->
+  <meta name="google-adsense-account" content="ca-pub-8594835989766649">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8594835989766649"
+   crossorigin="anonymous"></script>
 </head>
 
 <body>
