--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
 
 <body>
   <div id="root"></div>
+  
+  <!-- Google AdSense Ad Unit -->
+  <div style="text-align: center; margin: 20px 0;">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8594835989766649"
+         crossorigin="anonymous"></script>
+    <!-- Abhaya XYZ ADS -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-8594835989766649"
+         data-ad-slot="3778649201"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
   <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
