--- a/index.html
+++ b/index.html
@@ -39,6 +39,28 @@
   <meta name="twitter:description" content="Full Stack Developer specializing in React, Node.js, Python, and modern web technologies. Building innovative solutions with expertise in AI, automation, and data science." />
   <meta name="twitter:image" content="/images/abhaya1.jpg" />
 
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Abhaya Bikram Shahi",
+    "url": "https://www.abhayabikramshahi.xyz/",
+    "sameAs": [
+      "https://github.com/abhayabikramshahi",
+      "https://linkedin.com/in/abhayabikramshahi",
+      "https://twitter.com/abhayabikramshahi",
+      "https://instagram.com/abhayabikramshahi"
+    ],
+    "jobTitle": "Full Stack Developer & Tech Entrepreneur",
+    "alumniOf": "Your University/College Name (if applicable)",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Your Company Name (if applicable)"
+    }
+  }
+  </script>
+
   <!-- ✍️ Fonts & Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet" />
 
@@ -53,18 +75,16 @@
   
   <!-- Google AdSense Ad Unit -->
   <div style="text-align: center; margin: 20px 0;">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8594835989766649"
-         crossorigin="anonymous"></script>
-    <!-- Abhaya XYZ ADS -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-8594835989766649"
-         data-ad-slot="3778649201"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8594835989766649"
+     crossorigin="anonymous"></script>
+<!-- Abhaya XYZ ADS -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-8594835989766649"
+     data-ad-slot="3778649201"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </div>
 
   <script type="module" src="/src/main.jsx"></script>
